# pixel-agents

./: .gitignore  CLAUDE.md  README.md  article-medium-ptbr.md  article-medium.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  constants.rs  discovery.rs  events.rs  file_watcher.rs  lib.rs  line_reader.rs  main.rs  models.rs  persistence.rs  project_name.rs  session_registry.rs  state.rs  timer_manager.rs  transcript_parser.rs
webview-ui/: index.html  package-lock.json  package.json  vite.config.ts
webview-ui/public/assets/: layout-corporate.json  layout-cozy-library.json  layout-garden-office.json  layout-startup.json
webview-ui/src/: App.tsx  index.css  main.tsx  runtime.ts  tauriAdapter.ts  vscodeApi.ts
webview-ui/src/components/: AgentLabels.tsx  BottomToolbar.tsx  SettingsModal.tsx
webview-ui/src/hooks/: useEditorActions.ts  useExtensionMessages.ts
