[package]
name = "pixel-agents"
version = "0.1.0"
description = "Pixel art office where your Claude Code agents come to life"
authors = ["Pixel Agents Contributors"]
edition = "2021"

[lib]
name = "pixel_agents_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
tokio = { version = "1", features = ["full"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
open = "5"
